tests/ui/const-generics/float-generic.simple.stderr
error: `f32` is forbidden as the type of a const generic parameter
  --> $DIR/float-generic.rs:5:17
   |
LL | fn foo<const F: f32>() {}
   |                 ^^^
   |
   = note: the only supported types are integers, `bool` and `char`
   = help: more complex types are supported with `#![feature(adt_const_params)]`

error: aborting due to previous error

